--- a/Builder.ini
+++ b/Builder.ini
@@ -1,14 +1,14 @@
-; ConfigsPath is required
 [DEFAULT]
-ConfigsPath=D:\Games\SteamLibrary\steamapps\common\Mordhau Dedicated Server\Mordhau\Saved\Config\WindowsServer
+; OutputFile is required
+OutputFile=Game.ini
 
-; default values:
-;CreateBackups=True
-;BackupsPath=Backups
-;GameTemplatePath=Game.Template.ini
+; you can change these default values:
+; CreateBackups=True
+; BackupsPath=Backups
+; GameTemplatePath=configs/Game.Template.ini
 
-; you can specify many "ModsDir"
-ModsDir=Mods
-ModsDir=MyMods
-ModsDir=Default
-ModsDir=Private
+; you can specify many dirs with configs
+LoadDir=configs/Default
+LoadDir=configs/Mods
+LoadDir=configs/MyMods
+LoadDir=configs/Private
