--- a/configs/Mods/#GoodcatHorde.ini
+++ b/configs/Mods/#GoodcatHorde.ini
@@ -1,16 +1,18 @@
+[/Script/Mordhau.MordhauGameSession]
+Mods=1832010 ; https://mod.io/g/mordhau/m/mr-goodcats-old-horde
+
 [/Script/Mordhau.MordhauGameMode]
 MapRotation=HRD_ArenaG
+MapRotation=HRD_AridG
 MapRotation=HRD_AncientCrypt
 MapRotation=HRD_BlackForest
 MapRotation=HRD_CampG
 MapRotation=HRD_CastelloG
 MapRotation=HRD_CrossroadsG
+MapRotation=HRD_DungeonG
 MapRotation=HRD_FeitoriaG
 MapRotation=HRD_GradG
 MapRotation=HRD_MountainPeakG
 MapRotation=HRD_NoriaG
 MapRotation=HRD_TaigaG
 MapRotation=HRD_ThePitG
-
-[/Script/Mordhau.MordhauGameSession]
-Mods=1832010
