--- a/configs/Mods/#LordRobrechtHorde.ini
+++ b/configs/Mods/#LordRobrechtHorde.ini
@@ -1,3 +1,6 @@
+[/Script/Mordhau.MordhauGameSession]
+Mods=2000050 ; https://mod.io/g/mordhau/m/rob26rphvqywkggob1
+
 [/Script/Mordhau.MordhauGameMode]
 MapRotation=HRD_CampR
 MapRotation=HRD_GradR
@@ -8,6 +11,3 @@ MapRotation=HRD_CrossroadsR
 MapRotation=HRD_CastelloR
 MapRotation=HRD_CastelloLegacyR
 MapRotation=HRD_NoriaR
-
-[/Script/Mordhau.MordhauGameSession]
-Mods=2000050
