--- a/configs/Mods/#OldHorde.ini
+++ b/configs/Mods/#OldHorde.ini
@@ -1,3 +1,6 @@
+[/Script/Mordhau.MordhauGameSession]
+Mods=1699450 ; https://mod.io/g/mordhau/m/old-horde-source-files-included
+
 [/Script/Mordhau.MordhauGameMode]
 MapRotation=OH_Camp
 MapRotation=OH_Castello
@@ -9,6 +12,3 @@ MapRotation=OH_Noria
 MapRotation=OH_Taiga
 MapRotation=OH_Dungeon
 MapRotation=OH_Arid
-
-[/Script/Mordhau.MordhauGameSession]
-Mods=1699450
