--- a/configs/Mods/#QuentHorde.ini
+++ b/configs/Mods/#QuentHorde.ini
@@ -1,3 +1,6 @@
+[/Script/Mordhau.MordhauGameSession]
+Mods=1824408 ; https://mod.io/g/mordhau/m/quents-custom-horde-skill-tree
+
 [/Script/Mordhau.MordhauGameMode]
 MapRotation=HRD_Camp_Quent
 MapRotation=HRD_Castello_Quent
@@ -15,6 +18,3 @@ MapRotation=HRD_Grad_Quent_Nobleless
 MapRotation=HRD_MountainPeak_Quent_Nobleless
 MapRotation=HRD_Noria_Quent_Nobleless
 MapRotation=HRD_Taiga_Quent_Nobleless
-
-[/Script/Mordhau.MordhauGameSession]
-Mods=1824408
