--- a/configs/Mods/#YodaSeller.ini
+++ b/configs/Mods/#YodaSeller.ini
@@ -1,5 +1,5 @@
 [/Script/Mordhau.MordhauGameSession]
-Mods=2713507
+Mods=2713507 ; https://mod.io/g/mordhau/m/yoda-seller
 
 [/Script/Mordhau.MordhauGameMode]
 SpawnServerActorsOnMapLoad=/YodaSeller/YodaSellerInit.YodaSellerInit_C
