--- a/configs/Mods/#ShrekClub.ini
+++ b/configs/Mods/#ShrekClub.ini
@@ -1,7 +1,7 @@
 @requires configs/Mods/EquipmentFix.ini
 
-; [/Script/Mordhau.MordhauGameSession]
-; Mods=2708655 ; https://mod.io/g/mordhau/m/shrek-club
+[/Script/Mordhau.MordhauGameSession]
+Mods=2708655 ; https://mod.io/g/mordhau/m/shrek-club
 
 [EquipmentLoader]
 LoadEquipment=/ShrekClub/Weapons/BP_ShrekClub.BP_ShrekClub_C
