--- a/configs/Mods/#Lightsaber.ini
+++ b/configs/Mods/#Lightsaber.ini
@@ -1,7 +1,7 @@
 @requires configs/Mods/EquipmentFix.ini
 
-; [/Script/Mordhau.MordhauGameSession]
-; Mods= ; url
+[/Script/Mordhau.MordhauGameSession]
+Mods=3754883 ; https://mod.io/g/mordhau/m/lightsaber
 
 [EquipmentLoader]
 LoadEquipment=/Lightsaber/Blueprints/BP_LightsaberBlue.BP_LightsaberBlue_C
