--- a/configs/Mods/#YodaYeet.ini
+++ b/configs/Mods/#YodaYeet.ini
@@ -1,5 +1,5 @@
-; [/Script/Mordhau.MordhauGameSession]
-; Mods= ; url
+[/Script/Mordhau.MordhauGameSession]
+Mods=3755001 ; https://mod.io/g/mordhau/m/yoda-yeet
 
 [/Script/Mordhau.MordhauGameMode]
 SpawnServerActorsOnMapLoad=/YodaYeet/YodaYeetInit.YodaYeetInit_C
