Some config updates

--- a/configs/Default/#HordeMaps.ini
+++ b/configs/Default/#HordeMaps.ini
@@ -1,10 +1,13 @@
 [/Script/Mordhau.MordhauGameMode]
-MapRotation=HRD_Crossroads
-MapRotation=HRD_Castello
+MapRotation=HRD_Arid
 MapRotation=HRD_Camp
-MapRotation=HRD_Grad
-MapRotation=HRD_Taiga
-MapRotation=HRD_MountainPeak
-MapRotation=HRD_Feitoria
-MapRotation=HRD_Noria
+MapRotation=HRD_Castello
+MapRotation=HRD_Crossroads
 MapRotation=HRD_Dungeon
+MapRotation=HRD_Feitoria
+MapRotation=HRD_Grad
+MapRotation=HRD_MountainPeak
+MapRotation=HRD_Noria
+MapRotation=HRD_Taiga
+MapRotation=HRD_ThePit
+MapRotation=HRD_Totenwald
