--- a/configs/Mods/#AuslanderCustomWeapons.ini
+++ b/configs/Mods/#AuslanderCustomWeapons.ini
@@ -2,51 +2,51 @@
 Mods=2027080 ; https://mod.io/g/mordhau/m/auslnders-custom-equipment-mod1
 Mods=2486975 ; https://mod.io/g/mordhau/m/custom-weapons-mod-dependency
 
-; [/Script/Mordhau.MordhauGameMode]
-; SpawnServerActorsOnMapLoad=/WeaponsBlueprints/SpawnActors/AusCustomEquipmentHandler.AusCustomEquipmentHandler_C
+[/Script/Mordhau.MordhauGameMode]
+SpawnServerActorsOnMapLoad=/WeaponsBlueprints/SpawnActors/AusCustomEquipmentHandler.AusCustomEquipmentHandler_C
 
-@requires configs/Mods/EquipmentFix.ini
-[EquipmentLoader]
-LoadEquipment=/WeaponsBlueprints/BP_2HStick_2.BP_2HStick_2_C
-LoadEquipment=/WeaponsBlueprints/BP_Aerondit.BP_Aerondit_C
-LoadEquipment=/WeaponsBlueprints/BP_Anchor.BP_Anchor_C
-LoadEquipment=/WeaponsBlueprints/BP_AWP_DynamicScopeSwitch.BP_AWP_DynamicScopeSwitch_C
-LoadEquipment=/WeaponsBlueprints/BP_Banana.BP_Banana_C
-LoadEquipment=/WeaponsBlueprints/BP_Beastlord.BP_Beastlord_C
-LoadEquipment=/WeaponsBlueprints/BP_BurningSword.BP_BurningSword_C
-LoadEquipment=/WeaponsBlueprints/BP_Cinquedea2.BP_Cinquedea2_C
-LoadEquipment=/WeaponsBlueprints/BP_Cragblade.BP_Cragblade_C
-LoadEquipment=/WeaponsBlueprints/BP_CyberAxe.BP_CyberAxe_C
-LoadEquipment=/WeaponsBlueprints/BP_DiamondAxe.BP_DiamondAxe_C
-LoadEquipment=/WeaponsBlueprints/BP_DiamondPickaxe2.BP_DiamondPickaxe2_C
-LoadEquipment=/WeaponsBlueprints/BP_Dildo.BP_Dildo_C
-LoadEquipment=/WeaponsBlueprints/BP_Dragon.BP_Dragon_C
-LoadEquipment=/WeaponsBlueprints/BP_FangOfTheTwins.BP_FangOfTheTwins_C
-LoadEquipment=/WeaponsBlueprints/BP_FenderClean.BP_FenderClean_C
-LoadEquipment=/WeaponsBlueprints/BP_Fork.BP_Fork_C
-LoadEquipment=/WeaponsBlueprints/BP_FrosbiteSword.BP_FrosbiteSword_C
-LoadEquipment=/WeaponsBlueprints/BP_GachiMallet.BP_GachiMallet_C
-LoadEquipment=/WeaponsBlueprints/BP_GachiMalletOP.BP_GachiMalletOP_C
-LoadEquipment=/WeaponsBlueprints/BP_GibsonV.BP_GibsonV_C
-LoadEquipment=/WeaponsBlueprints/BP_GodslayersSword.BP_GodslayersSword_C
-LoadEquipment=/WeaponsBlueprints/BP_Hook.BP_Hook_C
-LoadEquipment=/WeaponsBlueprints/BP_IbanezBass.BP_IbanezBass_C
-LoadEquipment=/WeaponsBlueprints/BP_IronPipe.BP_IronPipe_C
-LoadEquipment=/WeaponsBlueprints/BP_IronSword.BP_IronSword_C
-LoadEquipment=/WeaponsBlueprints/BP_IronWill.BP_IronWill_C
-LoadEquipment=/WeaponsBlueprints/BP_Knife2.BP_Knife2_C
-LoadEquipment=/WeaponsBlueprints/BP_LeviathanAxe.BP_LeviathanAxe_C
-LoadEquipment=/WeaponsBlueprints/BP_LightSaberKyle.BP_LightSaberKyle_C
-LoadEquipment=/WeaponsBlueprints/BP_LongswordRusty2.BP_LongswordRusty2_C
-LoadEquipment=/WeaponsBlueprints/BP_Plug.BP_Plug_C
-LoadEquipment=/WeaponsBlueprints/BP_RevolverOP.BP_RevolverOP_C
-LoadEquipment=/WeaponsBlueprints/BP_RevolverRWFFA.BP_RevolverRWFFA_C
-LoadEquipment=/WeaponsBlueprints/BP_RiversOfBlood.BP_RiversOfBlood_C
-LoadEquipment=/WeaponsBlueprints/BP_Spinner.BP_Spinner_C
-LoadEquipment=/WeaponsBlueprints/BP_stool_A.BP_stool_A_C
-LoadEquipment=/WeaponsBlueprints/BP_SuperTurd.BP_SuperTurd_C
-LoadEquipment=/WeaponsBlueprints/BP_Trident.BP_Trident_C
-LoadEquipment=/WeaponsBlueprints/BP_virtuousTreaty.BP_virtuousTreaty_C
-LoadEquipment=/WeaponsBlueprints/BP_VirtuousTreaty2.BP_VirtuousTreaty2_C
-LoadEquipment=/WeaponsBlueprints/BP_Zirael.BP_Zirael_C
-LoadEquipment=/WeaponsBlueprints/Flashbang/BP_FlashBang.BP_FlashBang_C
+; @requires configs/Mods/EquipmentFix.ini
+; [EquipmentLoader]
+; LoadEquipment=/WeaponsBlueprints/BP_2HStick_2.BP_2HStick_2_C
+; LoadEquipment=/WeaponsBlueprints/BP_Aerondit.BP_Aerondit_C
+; LoadEquipment=/WeaponsBlueprints/BP_Anchor.BP_Anchor_C
+; LoadEquipment=/WeaponsBlueprints/BP_AWP_DynamicScopeSwitch.BP_AWP_DynamicScopeSwitch_C
+; LoadEquipment=/WeaponsBlueprints/BP_Banana.BP_Banana_C
+; LoadEquipment=/WeaponsBlueprints/BP_Beastlord.BP_Beastlord_C
+; LoadEquipment=/WeaponsBlueprints/BP_BurningSword.BP_BurningSword_C
+; LoadEquipment=/WeaponsBlueprints/BP_Cinquedea2.BP_Cinquedea2_C
+; LoadEquipment=/WeaponsBlueprints/BP_Cragblade.BP_Cragblade_C
+; LoadEquipment=/WeaponsBlueprints/BP_CyberAxe.BP_CyberAxe_C
+; LoadEquipment=/WeaponsBlueprints/BP_DiamondAxe.BP_DiamondAxe_C
+; LoadEquipment=/WeaponsBlueprints/BP_DiamondPickaxe2.BP_DiamondPickaxe2_C
+; LoadEquipment=/WeaponsBlueprints/BP_Dildo.BP_Dildo_C
+; LoadEquipment=/WeaponsBlueprints/BP_Dragon.BP_Dragon_C
+; LoadEquipment=/WeaponsBlueprints/BP_FangOfTheTwins.BP_FangOfTheTwins_C
+; LoadEquipment=/WeaponsBlueprints/BP_FenderClean.BP_FenderClean_C
+; LoadEquipment=/WeaponsBlueprints/BP_Fork.BP_Fork_C
+; LoadEquipment=/WeaponsBlueprints/BP_FrosbiteSword.BP_FrosbiteSword_C
+; LoadEquipment=/WeaponsBlueprints/BP_GachiMallet.BP_GachiMallet_C
+; LoadEquipment=/WeaponsBlueprints/BP_GachiMalletOP.BP_GachiMalletOP_C
+; LoadEquipment=/WeaponsBlueprints/BP_GibsonV.BP_GibsonV_C
+; LoadEquipment=/WeaponsBlueprints/BP_GodslayersSword.BP_GodslayersSword_C
+; LoadEquipment=/WeaponsBlueprints/BP_Hook.BP_Hook_C
+; LoadEquipment=/WeaponsBlueprints/BP_IbanezBass.BP_IbanezBass_C
+; LoadEquipment=/WeaponsBlueprints/BP_IronPipe.BP_IronPipe_C
+; LoadEquipment=/WeaponsBlueprints/BP_IronSword.BP_IronSword_C
+; LoadEquipment=/WeaponsBlueprints/BP_IronWill.BP_IronWill_C
+; LoadEquipment=/WeaponsBlueprints/BP_Knife2.BP_Knife2_C
+; LoadEquipment=/WeaponsBlueprints/BP_LeviathanAxe.BP_LeviathanAxe_C
+; LoadEquipment=/WeaponsBlueprints/BP_LightSaberKyle.BP_LightSaberKyle_C
+; LoadEquipment=/WeaponsBlueprints/BP_LongswordRusty2.BP_LongswordRusty2_C
+; LoadEquipment=/WeaponsBlueprints/BP_Plug.BP_Plug_C
+; LoadEquipment=/WeaponsBlueprints/BP_RevolverOP.BP_RevolverOP_C
+; LoadEquipment=/WeaponsBlueprints/BP_RevolverRWFFA.BP_RevolverRWFFA_C
+; LoadEquipment=/WeaponsBlueprints/BP_RiversOfBlood.BP_RiversOfBlood_C
+; LoadEquipment=/WeaponsBlueprints/BP_Spinner.BP_Spinner_C
+; LoadEquipment=/WeaponsBlueprints/BP_stool_A.BP_stool_A_C
+; LoadEquipment=/WeaponsBlueprints/BP_SuperTurd.BP_SuperTurd_C
+; LoadEquipment=/WeaponsBlueprints/BP_Trident.BP_Trident_C
+; LoadEquipment=/WeaponsBlueprints/BP_virtuousTreaty.BP_virtuousTreaty_C
+; LoadEquipment=/WeaponsBlueprints/BP_VirtuousTreaty2.BP_VirtuousTreaty2_C
+; LoadEquipment=/WeaponsBlueprints/BP_Zirael.BP_Zirael_C
+; LoadEquipment=/WeaponsBlueprints/Flashbang/BP_FlashBang.BP_FlashBang_C
