--- a/configs/Mods/#GoodcatHorde.ini
+++ b/configs/Mods/#GoodcatHorde.ini
@@ -1,11 +1,14 @@
 [/Script/Mordhau.MordhauGameSession]
 Mods=1832010 ; https://mod.io/g/mordhau/m/mr-goodcats-old-horde
+Mods=3949414 ; https://mod.io/g/mordhau/m/blackforest-dependencies
+Mods=3949422 ; https://mod.io/g/mordhau/m/ancientcrypt-dependencies
+Mods=3949429 ; https://mod.io/g/mordhau/m/mr-goodcats-old-horde-weapon-dependencies
 
 [/Script/Mordhau.MordhauGameMode]
 MapRotation=HRD_ArenaG
 MapRotation=HRD_AridG
-MapRotation=HRD_AncientCrypt
-MapRotation=HRD_BlackForest
+MapRotation=HRD_AncientCryptG
+MapRotation=HRD_BlackForestG
 MapRotation=HRD_CampG
 MapRotation=HRD_CastelloG
 MapRotation=HRD_CrossroadsG
