--- a/configs/Mods/#QuentHorde.ini
+++ b/configs/Mods/#QuentHorde.ini
@@ -2,19 +2,28 @@
 Mods=1824408 ; https://mod.io/g/mordhau/m/quents-custom-horde-skill-tree
 
 [/Script/Mordhau.MordhauGameMode]
+MapRotation=HRD_Arid_Quent
 MapRotation=HRD_Camp_Quent
 MapRotation=HRD_Castello_Quent
 MapRotation=HRD_Crossroads_Quent
+MapRotation=HRD_Dungeon_Quent
 MapRotation=HRD_Feitoria_Quent
 MapRotation=HRD_Grad_Quent
 MapRotation=HRD_MountainPeak_Quent
 MapRotation=HRD_Noria_Quent
 MapRotation=HRD_Taiga_Quent
+MapRotation=HRD_ThePit_Quent
+MapRotation=HRD_Totenwald_Quent
+
+MapRotation=HRD_Arid_Quent_Nobleless
 MapRotation=HRD_Camp_Quent_Nobleless
 MapRotation=HRD_Castello_Quent_Nobleless
 MapRotation=HRD_Crossroads_Quent_Nobleless
+MapRotation=HRD_Dungeon_Quent_Nobleless
 MapRotation=HRD_Feitoria_Quent_Nobleless
 MapRotation=HRD_Grad_Quent_Nobleless
 MapRotation=HRD_MountainPeak_Quent_Nobleless
 MapRotation=HRD_Noria_Quent_Nobleless
 MapRotation=HRD_Taiga_Quent_Nobleless
+MapRotation=HRD_ThePit_Quent_Nobleless
+MapRotation=HRD_Totenwald_Quent_Nobleless
